Image stretching Issue [resolved]

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body {
   margin: 0.5rem;
   height: 3.5rem;
   width: 3.5rem;
+  object-fit: cover;
 }
 
 .img p {
@@ -82,6 +83,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   height: 90%;
   width: 100%;
+  object-fit: cover;
 }
 
 figcaption {
